# z2p

./: .env  Cargo.toml  config.toml
migrations/: 20240923141518_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  response.rs
src/router/: mod.rs  subscriptions.rs
src/routes/: mod.rs  sub.rs
tests/: health_check.rs  sub.rs  subscribe.rs
