[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
http = "1.1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = "0.12.7"
serde_json = "1.0.128"
hyper-util = "0.1.8"
http-body-util = "0.1.2"
tower = { version = "0.5.1", features = ["util"] }
mime = "0.3.17"


[dev-dependencies]
reqwest = "0.12.7"
