[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
http = "1.1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.128"
hyper-util = "0.1.8"
http-body-util = "0.1.2"
# tower = { version = "0.5.1", features = ["util"] }
tower = "0.5.1"
mime = "0.3.17"
serde = { version = "1.0.210", features = ["serde_derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
once_cell = "1.19.0"
reqwest = "0.12.7"
secrecy = { version = "0.10.2", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
